--- a/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrPinyinTpl.html
@@ -157,7 +157,7 @@
 									<td>{{showInfo.detailArea}}</td>
 								</tr>
 								<tr>
-									<td>图符号:</td>
+									<td>图幅号:</td>
 									<td>{{showInfo.meshId}}</td>
 								</tr>
 								<tr>
