--- a/scripts/components/column/tpls/chinaName/namePinyinTpl.html
+++ b/scripts/components/column/tpls/chinaName/namePinyinTpl.html
@@ -137,27 +137,23 @@
 							<table class="table">
 								<tr>
 									<td style="width: 25%;">PID:</td>
-									<td>12345678</td>
-								</tr>
-								<tr>
-									<td>作业员:</td>
-									<td>张三</td>
+									<td>{{showInfo.pid}}</td>
 								</tr>
 								<tr>
 									<td>FID:</td>
-									<td>1111111111111</td>
+									<td>{{showInfo.poiNum}}</td>
 								</tr>
 								<tr>
 									<td>地域:</td>
-									<td>北京凉山彝族自治州会理县</td>
+									<td>{{showInfo.detailArea}}</td>
 								</tr>
 								<tr>
-									<td>图符号:</td>
-									<td>898989</td>
+									<td>图幅号:</td>
+									<td>{{showInfo.meshId}}</td>
 								</tr>
 								<tr>
 									<td>图片:</td>
-									<td>0张</td>
+									<td>{{showInfo.photos.length}}张</td>
 								</tr>
 							</table>
 						</div>
