bug修改：31、108、144、145、poi列表最后一条数保存后报错,POI图片增加删除bug,切换图片tag逻辑有误

--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -6,7 +6,7 @@
                   <li>
                       <label>名 称</label>
                       <div >
-                          <input fm-edit-view type="text" class="fm-control" ng-model="poi.name.name"/>
+                          <input fm-edit-view type="text" class="fm-control" ng-model="poi.name.name" ng-blur="validataName($event);"/>
                       </div>
                   </li>
                   <li>
