--- a/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
@@ -22,14 +22,14 @@
             <div><label class="control-label">顺向速度</label></div>
             <div class="inline">
                     <input type="text" id="fromSpeed"
-                           ng-model="oridiData.fromSpeedLimit" ng-disabled="rticDir ==3">
+                           ng-model="oridiData.fromSpeedLimit" ng-disabled="rticDir ==3" ng-blur="hideDirect()" ng-focus="showDirect(2)">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">逆向速度</label></div>
             <div class="inline">
                 <input type="text" id="toSpeed"
-                       ng-model="oridiData.toSpeedLimit" ng-disabled="rticDir ==2">
+                       ng-model="oridiData.toSpeedLimit" ng-disabled="rticDir ==2" ng-blur="hideDirect()" ng-focus="showDirect(3)">
             </div>
         </li>
         <li class="list-group-item">
