rdnode和路口渲染修改

--- a/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminTpl.html
+++ b/scripts/components/road/tpls/attr_adminstratives_tpl/adAdminTpl.html
@@ -67,6 +67,12 @@
                                 <input type="text" ng-model="adAdminData.population" style="width: 85%"/>万人
                             </div>
                         </li>
+                        <li>
+                            <label>关联link</label>
+                            <div>
+                                <input type="text" ng-model="adAdminData.linkPid" style="width: 85%" disabled/>
+                            </div>
+                        </li>
                     </ul>
                     <ul class="fm-ul fm-ul-form">
                         <li>
