在线批处理和执行检查完成

--- a/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
@@ -23,10 +23,10 @@
         <i class="glyphicon glyphicon-refresh"></i>
         刷新检查
         </button>
-        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="checkUpResult();">
-        <i class="glyphicon glyphicon-equalizer"></i>
-        在线检查
-        </button>
+        <!--<button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="checkUpResult();">-->
+        <!--<i class="glyphicon glyphicon-equalizer"></i>-->
+        <!--在线检查-->
+        <!--</button>-->
         <button ng-show="tagSelect == 'searchResult'" class="btn btn-xs fm-output-btn pull-right" ng-click="emptyTableResult('searchResult');">
         <i class="glyphicon glyphicon-ban-circle"></i>
         清空
