--- a/less/editor.less
+++ b/less/editor.less
@@ -182,6 +182,7 @@ a{
     position: relative;
     display: inline-block;
     top: 50%;
+    z-index: 10000;
   }
   .fm-fold-btn > a {
     width: 100%;
