--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -8,6 +8,13 @@
             </div>
             <div class="list-line"></div>
         </li>
+        <li class="list-group-item">
+            <div><label class="control-label">图幅编号</label></div>
+            <div class="inline">
+                <input type="text" placeholder="0"
+                       ng-model="linkData.meshId" disabled class="chosen-disabled">
+            </div>
+        </li>
         <li class="list-group-item" style="padding-left: 15px">
             <div>
                 <label class="control-label">道路种别</label>
@@ -103,16 +110,19 @@
             </div>
         </li>
         <li class="list-group-item">
-            <div><label class="control-label">城市道路</label></div>
-
+            <div><label class="control-label" >是否高架</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="urbanRadio" value="0" ng-model="linkData.urban">
+                    <input type="radio" name="isViaductRadio" value=0 ng-model="linkData.isViaduct">
                     否
                 </label>
                 <label>
-                    <input type="radio" name="urbanRadio" value="1" ng-model="linkData.urban">
+                    <input type="radio" name="isViaductRadio" value=1 ng-model="linkData.isViaduct">
                     是
+                </label>
+                <label>
+                    <input type="radio" name="isViaductRadio" value=2 ng-model="linkData.isViaduct">
+                    未调查
                 </label>
             </div>
         </li>
@@ -130,19 +140,29 @@
             </div>
         </li>
         <li class="list-group-item">
-            <div><label class="control-label" >是否高架</label></div>
+            <div><label class="control-label" >铺设状态</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="isViaductRadio" value=0 ng-model="linkData.isViaduct">
+                    <input type="radio" name="paveStatusRadio" value=0 ng-model="linkData.paveStatus">
+                    铺设
+                </label>
+                <label>
+                    <input type="radio" name="paveStatusRadio" value=1 ng-model="linkData.paveStatus">
+                    未铺设
+                </label>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div><label class="control-label">城市道路</label></div>
+
+            <div class="radio inline" style="text-align: left">
+                <label>
+                    <input type="radio" name="urbanRadio" value="0" ng-model="linkData.urban">
                     否
                 </label>
                 <label>
-                    <input type="radio" name="isViaductRadio" value=1 ng-model="linkData.isViaduct">
+                    <input type="radio" name="urbanRadio" value="1" ng-model="linkData.urban">
                     是
-                </label>
-                <label>
-                    <input type="radio" name="isViaductRadio" value=2 ng-model="linkData.isViaduct">
-                    未调查
                 </label>
             </div>
         </li>
