--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
@@ -7,7 +7,7 @@
 
                         <div ui-layout-container class="fm-no-scroll">
                             <div id="topoMap"
-                                 style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
+                                 style="background-color:#DDDDFF;width: 100%;height: 100%;position: absolute;"></div>
                             <div class="btn-group btn-group-justified fm-btn-group"
                                  style="bottom:5px;left:250px;width:300px;position: absolute;">
                                 <div class="btn-group" role="group">
