--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -1,4 +1,3 @@
-
 <div id="basicDiv" ng-controller="basicController" >
     <from name="basicFrom">
     <ul class="list-group list-group-lg m-b-none">
@@ -21,20 +20,20 @@
         </li>
         <li class="list-group-item">
             <div><label class="control-label">道路方向</label></div>
-            <div class="inline"><input type="text" ng-model="linkData.direct" disabled/>
+            <div class="inline"><input ng-class="'chosen-disabled'" type="text" ng-value="linkData.direct=='0'?'0 未调查':linkData.direct=='1'?'1 双方向':linkData.direct=='2'?'2 顺方向':'3 逆方向'" disabled/>
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">车道数</label></div>
             <div class="inline">
                 <label for="LaneNum" style="margin-left: -3px;">总</label>
-                <input id="LaneNum" type="text" style="width: 30px" ng-model="linkData.laneNum"
+                <input class="limit-length" id="LaneNum" type="text" style="width: 30px" ng-model="linkData.laneNum"
                        ng-change="addLeftAdditionalLane($event)"/>
                 <label for="leftLaneNum">左</label>
-                <input id="leftLaneNum" type="text" style="width: 30px" ng-model="linkData.laneLeft"
+                <input ng-class="{'chosen-disabled':(linkData.direct==2||linkData.direct==3)}" ng-disabled="linkData.direct==2||linkData.direct==3" id="leftLaneNum" type="text" style="width: 30px" ng-model="linkData.laneLeft"
                        ng-change="addLeftAdditionalLane($event)"/>
                 <label for="rightLneNum">右</label>
-                <input id="rightLneNum" type="text" style="width: 30px" ng-model="linkData.laneRight"/>
+                <input ng-class="{'chosen-disabled':(linkData.direct==2||linkData.direct==3)}" ng-disabled="linkData.direct==2||linkData.direct==3" id="rightLneNum" type="text" style="width: 30px" ng-model="linkData.laneRight"/>
             </div>
         </li>
         <li class="list-group-item">
