--- a/less/editor.less
+++ b/less/editor.less
@@ -182,7 +182,7 @@ a{
     width: 15px;
     position: relative;
     display: inline-block;
-    top: 50%;
+    margin-top: 50%;
   }
   .fm-fold-btn > a {
     width: 100%;
@@ -194,7 +194,7 @@ a{
   .fm-fold-btn {
     height: 15px;
     position: relative;
-    left: 50%;
+    margin-left: 50%;
   }
   .fm-fold-btn > a {
     width: 50px;
