--- a/less/editor.less
+++ b/less/editor.less
@@ -172,7 +172,7 @@ a{
   transition: all .2s ease-in-out;
   z-index: 1;
   .fm-fold-btn > a {
-    display: block;
+    display: inline-block;
     background-color: @light-gray !important;
     opacity: 0.95;
   }
@@ -182,7 +182,7 @@ a{
     width: 15px;
     position: relative;
     display: inline-block;
-    margin-top: 50%;
+    top: 50%;
   }
   .fm-fold-btn > a {
     width: 100%;
