--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTopoTpl.html
@@ -9,19 +9,24 @@
                             <div id="topoMap"
                                  style="background-color:#DDDDFF;width: 100%;height: 100%;position: absolute;"></div>
                             <div class="btn-group btn-group-justified fm-btn-group"
-                                 style="bottom:5px;left:250px;width:300px;position: absolute;">
+                                 style="bottom:5px;left:250px;width:400px;position: absolute;">
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn" ng-click="doCreate()">
+                                        <i class="glyphicon glyphicon-plus"></i> 创建连通
+                                    </button>
+                                </div>
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn" ng-click="doSave()">
                                         <i class="glyphicon glyphicon-floppy-disk"></i> 保 存
                                     </button>
                                 </div>
                                 <div class="btn-group" role="group">
-                                    <button type="button" class="btn" ng-click="doDelete()">
-                                        <i class="glyphicon glyphicon-plus"></i> 创 建
+                                    <button type="button" class="btn" ng-click="doCancel()">
+                                        <i class="glyphicon glyphicon-repeat"></i> 取消操作
                                     </button>
                                 </div>
                                 <div class="btn-group" role="group">
-                                    <button type="button" class="btn" ng-click="doCancel()">
+                                    <button type="button" class="btn" ng-click="doClose()">
                                         <i class="glyphicon glyphicon-floppy-remove"></i> 关 闭
                                     </button>
                                 </div>
