种别为空bug，时间，照片fccPid等bug修改

--- a/scripts/components/tools/fmTimeComponent/fmdateTimer.html
+++ b/scripts/components/tools/fmTimeComponent/fmdateTimer.html
@@ -426,7 +426,7 @@
             <div class="line"></div>
         </div>
     </div>
-    <div class="datetip fm-datepick-tip">
+    <div class="datetip fm-datepick-tip" style="display: none">
         <div class="pull-left" style="margin-top: -8px;color: #FFF;">时间段设置</div>
         <div class="pull-right" style="margin-top: -10px;">
             <button type="button" class="close" aria-label="Close" ng-click="dateSelect($event)"
