--- a/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -46,7 +46,7 @@
                 <div class="d-name">箭头图号：</div>
                 <div class="d-value">
                     <div ng-show="diverObj.details[0].branchType != 3">
-                        <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图代码" ng-model="diverObj.details[0].arrowCode" ng-keydown="showPicSelect()">
+                        <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图代码" ng-model="diverObj.details[0].arrowCode" ng-change="showPicSelect()">
                     </div>
                     <div ng-show="diverObj.details[0].branchType == 3">
                         <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图代码" ng-model="diverObj.details[0].arrowCode" ng-keydown="showPicSelect()" data-toggle="tooltip" data-placement="top" title="3D分歧箭头图号必须e或c开头">
