bug修改 大门，路口，POI等

--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -84,6 +84,12 @@
                       </div>
                   </li>
                   <li>
+                      <label >关联LINK</label>
+                      <div>
+                          <span ng-bind="poi.linkPid"></span>
+                      </div>
+                  </li>
+                  <li>
                       <label >备注</label>
                       <div>
                           <textarea fm-edit-view class="fm-control" ng-model="poi.poiMemo" rows=""></textarea>
