--- a/scripts/components/road/tpls/attr_cross_tpl/namesTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/namesTpl.html
@@ -15,7 +15,7 @@
                     <li>
                         <label>代码语言</label>
                         <div>
-                            <select ng-model="info.langCode" class="fm-control"
+                            <select ng-model="info.langCode" class="fm-control" ng-change="changeLanguage($index);"
                                     ng-options="value.id as value.label for value in langCodeOptions">
                             </select>
                         </div>
@@ -36,11 +36,11 @@
                         <label >名称来源</label>
                         <div class="radio inline" style="text-align: left">
                             <label>
-                                <input type="radio" name="originOfName{{$index}}" value=0 ng-model="info.srcFlag">
+                                <input type="radio" ng-disabled="info.langCode == 'ENG'" name="originOfName{{$index}}" value=0 ng-model="info.srcFlag">
                                 未定义
                             </label>
                             <label>
-                                <input type="radio" name="originOfName{{$index}}" value=1 ng-model="info.srcFlag">
+                                <input type="radio" ng-disabled="info.langCode != 'ENG'" name="originOfName{{$index}}" value=1 ng-model="info.srcFlag">
                                 翻译
                             </label>
                         </div>
