--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -33,14 +33,15 @@
         <li class="list-group-item">
             <div><label class="control-label">车道数</label></div>
             <div class="inline">
-                <label ng-show="!showLeftRight" for="LaneNum" style="margin-left: -3px;">总</label>
-                <input ng-show="!showLeftRight" class="limit-length" id="LaneNum" type="text" style="width: 30px" ng-model="linkData.laneNum"
-                       ng-change="addLeftAdditionalLane($event)"/>
-                <label for="leftLaneNum">左</label>
-                <input ng-class="{'chosen-disabled':(linkData.direct==2||linkData.direct==3)}" id="leftLaneNum" type="text" style="width: 30px" ng-model="linkData.laneLeft"
-                       ng-change="addLeftAdditionalLane($event)"/>
-                <label for="rightLneNum">右</label> <!--ng-show="showLeftRight"-->
-                <input ng-class="{'chosen-disabled':(linkData.direct==2||linkData.direct==3)}" id="rightLneNum" type="text" style="width: 30px" ng-model="linkData.laneRight"/>
+                <label ng-class="{'chosen-disabled':(linkData.direct==1)}" for="LaneNum" style="margin-left: -3px;">总</label>
+                <input ng-class="{'chosen-disabled':(linkData.direct==1)}" class="limit-length" id="LaneNum" type="text" style="width: 30px;" ng-model="linkData.laneNum"
+                       ng-change="numberLengthLimit(1,linkData.laneNum)"/>
+                <label ng-class="{'chosen-disabled':!(linkData.direct==1)}" for="leftLaneNum">左</label>
+                <input ng-class="{'chosen-disabled':!(linkData.direct==1)}" id="leftLaneNum" type="text" style="width: 30px" ng-model="linkData.laneLeft"
+                       ng-change="numberLengthLimit(2,linkData.laneLeft,linkData.laneRight)"/>
+                <label ng-class="{'chosen-disabled':!(linkData.direct==1)}" for="rightLneNum">右</label>
+                <input ng-class="{'chosen-disabled':!(linkData.direct==1)}" id="rightLneNum" type="text" style="width: 30px" ng-model="linkData.laneRight"
+                       ng-change="numberLengthLimit(3,linkData.laneLeft,linkData.laneRight)"/>
             </div>
         </li>
         <li class="list-group-item">
